# vergil

./: LICENSE  README.md
cpp/: CMakeLists.txt  anti_hook.cpp  anti_hook.h  confhandle.h  mdbase.cpp  str_utils.h  sys.h  utils.cpp
here/app/: build.gradle
here/app/src/androidTest/java/com/example/vergil3/: ExampleInstrumentedTest.java
here/app/src/main/: AndroidManifest.xml
here/app/src/main/cpp/: anti_hook.h  base.h  conf.h  confhandle.cpp  func.cpp  func.h  got.cpp  got.h  mdbase.h  mem.cpp  mem.h  native-lib.cpp  sec.cpp  sec.h  sm4.cpp  sm4.h  str_utils.cpp  sys.cpp  utils.h
here/app/src/main/java/com/example/vergil3/: MainActivity.java
here/app/src/main/res/values/: strings.xml
here/app/src/test/java/com/example/vergil3/: ExampleUnitTest.java
here/gradle/wrapper/: gradle-wrapper.properties
